# GLPress

./: .gitignore  CMakeLists.txt  CubeModel.h  GLSLProgramCompiler.h  LICENCE  Main.cpp  Main.h  README.md  Window.cpp  gl_06.cpp  shprogram.cpp
cmake/modules/: FindSOIL.cmake
resources/: cube.mesh
resources/materials/: metal.frag  metal.vert
resources/shaders/: ambient.frag  ambient.vert  main.frag  main.vert  skybox.frag  skybox.vert
shaders/: gl_06.frag  gl_06.vert
src/: CubeModel.cpp  Main.cpp  Main.h  Renderer.cpp  Renderer.h
src/Animation/: Animation.h  AnimationConcurrent.cpp  AnimationConcurrent.h  AnimationDelay.cpp  AnimationDelay.h  AnimationLightIntensity.cpp  AnimationLightIntensity.h  AnimationMaterialOpacity.cpp  AnimationMaterialOpacity.h  AnimationModelMaterialSwap.cpp  AnimationModelMaterialSwap.h  AnimationModelMove.cpp  AnimationModelMove.h  AnimationMoveBy.cpp  AnimationMoveBy.h  AnimationRotateBy.cpp  AnimationRotateBy.h  AnimationSequence.cpp  AnimationSequence.h  AnimationTextureDisplacement.cpp  AnimationTextureDisplacement.h  ModelAnimationMove.cpp  ModelAnimationMove.h
src/Camera/: Camera.cpp  Camera.h
src/Light/: DirectLight.cpp  DirectLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/Material/: Material.cpp  Material.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
src/Model/: CubeBuilder.cpp  CubeBuilder.h  CylinderBuilder.cpp  CylinderBuilder.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Model.cpp  Model.h  OBJParser.cpp  OBJParser.h  PlaneBuilder.cpp  PlaneBuilder.h
src/Scene/: Group.cpp  Group.h  Scene.cpp  Scene.h
src/Utils/: GLSLProgramCompiller.cpp  Logger.h  Utils.cpp  Utils.h  Window.cpp  Window.h
